// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> render matches snapshot 1`] = `<styled.div />`;

exports[`<Breadcrumbs /> render matches snapshot 2`] = `
<styled.div>
  <styled.div
    key="52a296cb5b759fd76a2d5fd897e0d87c34114f97"
  >
    <div />
  </styled.div>
</styled.div>
`;

exports[`<Breadcrumbs /> render matches snapshot 3`] = `
<styled.div>
  <styled.div
    key="82242d62ac41874fb3e35e72d4f2eac43a40040c"
  >
    <Styled(Link)
      data-active={false}
      to="bar"
    >
      foo
    </Styled(Link)>
  </styled.div>
</styled.div>
`;

exports[`<Breadcrumbs /> render matches snapshot 4`] = `
<styled.div>
  <styled.div
    key="82242d62ac41874fb3e35e72d4f2eac43a40040c"
  >
    <Styled(Link)
      data-active={false}
      to="bar"
    >
      foo
    </Styled(Link)>
  </styled.div>
  <styled.div
    key="52a296cb5b759fd76a2d5fd897e0d87c34114f97"
  >
    <div />
  </styled.div>
</styled.div>
`;
